[DSTEW-POC] - Add more test coverage